fix: Fixed gap

--- a/src/pages/AboutUsPage/AboutUsIntroduction/AboutUsIntroduction.module.css
+++ b/src/pages/AboutUsPage/AboutUsIntroduction/AboutUsIntroduction.module.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     padding: 25px 0 130px;
     box-sizing: border-box;
+    gap: 82px;
 }
 
 .Con_Bl {
